fixed hover effect on mobile for navbar

--- a/src/components/layout/styles.module.css
+++ b/src/components/layout/styles.module.css
@@ -53,6 +53,12 @@
   padding-top: 17px;
 }
 
+/* Cancel hover effect for active item */
+.activeNavItem:hover::before {
+  transform: scaleX(0);
+}
+
+
 .logoWrapper .navItem {
   border-right: none !important;
 }
